# melody-lib

./: CMakeLists.txt
libc/amd64/threads/: amd64.il
libelf/: CMakeLists.txt  gelf.h  libelf.h  libelf_convert.c  libelf_msize.c
libobjc/runtime/: .objc-api.h.swp  objc.h
